sumo/tests/netconvert/errors/xml_no_edg/options.netconvert
--xml-node-files=%SUMO_DIST%\tests\netconvert\errors\xml_no_edg\hokkaido.nod.xml --output-file=net.net.xml
